# furnace-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_ANALYSIS_REPORT.md  MODBUS_STUDY_PLAN.md  PROJECT_ANALYSIS.md  build_log.txt  code explanations.md  partitions.csv
components/commands_dispatcher/: CMakeLists.txt  Kconfig
components/common/: CMakeLists.txt
components/coordinator_component/: CMakeLists.txt  Kconfig
components/coordinator_component/include/: coordinator_component.h  coordinator_component_types.h
components/coordinator_component/src/: coordinator_component.c  coordinator_component_events.c  coordinator_component_events.h  coordinator_component_heater_controller.c  coordinator_component_internal.h  coordinator_component_log.h  coordinator_component_task.c  coordinator_component_task.h  coordinator_core.c  heating_profile_task.c  heating_profile_task.h
components/core_types/: CMakeLists.txt
components/debug_console/: CMakeLists.txt  Kconfig
components/device_manager/: CMakeLists.txt  Kconfig
components/error_manager/: CMakeLists.txt  Kconfig
components/event_manager/: CMakeLists.txt  Kconfig
components/gpio_master_driver/: CMakeLists.txt
components/health_monitor/: CMakeLists.txt  Kconfig
components/heater_controller_component/: CMakeLists.txt  Kconfig
components/heating_program_validation/: CMakeLists.txt
components/logger-component/: CMakeLists.txt  logger-component.c
components/logger_component/: CMakeLists.txt  Kconfig
components/modbus_master/: CMakeLists.txt  Kconfig
components/modbus_temp_monitor/: CMakeLists.txt  Kconfig
components/modbus_temp_monitor/include/: modbus_temp_monitor.h
components/modbus_temp_monitor/src/: modbus_rtu.c  modbus_rtu.h  modbus_temp_monitor.c  modbus_temp_monitor_stub.c  ms9024.c  ms9024.h
components/nextion_hmi/: CMakeLists.txt  Kconfig  MERGE_PLAN.md
components/nextion_hmi/docs/: README.md  nextion_commands.md  nextion_editor_guide.md  nextion_elements_code.md
components/nextion_hmi/docs/legacy_project/: CMakeLists.txt  PLAN.md  README.md  REFACTORING.md  RISK_LOG.md  legacy_main.c
components/nextion_hmi/include/: app_config.h  config.h  heating_program_models.h  nextion_events.h  nextion_file_reader.h  nextion_hmi.h  nextion_hmi_docs.h  nextion_storage.h  nextion_transport.h  nextion_ui.h  program_graph.h  program_models.h  program_profile_adapter.h  program_validation.h
components/nextion_hmi/src/: config.c  nextion_events.c  nextion_file_reader.c  nextion_hmi.c  nextion_storage.c  nextion_transport.c  nextion_ui.c  program_graph.c  program_models.c  program_profile_adapter.c  program_validation.c
components/nextion_hmi/src/coordinator/: Kconfig  hmi_coordinator.c  hmi_coordinator_internal.h
components/nextion_hmi/src/events/: Kconfig  nextion_events.c  nextion_events_internal.h  nextion_manual_handlers.c  nextion_manual_handlers.h  nextion_parse_utils.c  nextion_parse_utils.h  nextion_program_handlers.c  nextion_program_handlers.h  nextion_run_handlers.c  nextion_run_handlers.h  nextion_settings_handlers.c  nextion_settings_handlers.h
components/nextion_hmi/src/program/: Kconfig  heating_program_graph.c  heating_program_graph_internal.h  heating_program_models.c  heating_program_models_internal.h
components/nextion_hmi/src/storage/: Kconfig  nextion_file_reader.c  nextion_file_reader_internal.h  nextion_storage.c  nextion_storage_internal.h
components/nextion_hmi/src/transport/: Kconfig  nextion_rx_task.c  nextion_transport.c  nextion_transport_internal.h
components/nextion_hmi/src/ui/: Kconfig  nextion_ui.c
components/pid_component/: CMakeLists.txt  Kconfig
components/run_indicator/: CMakeLists.txt  Kconfig
components/spi-master-component/: CMakeLists.txt  spi-master-component.c
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
(+132 files in other folders)
