idf_component_register(
    SRCS
        "main.c"
        "config.c"
        "nextion_transport.c"
        "nextion_events.c"
        "nextion_file_reader.c"
        "nextion_storage.c"
        "nextion_ui.c"
        "program_graph.c"
        "program_models.c"
        "program_validation.c"
    INCLUDE_DIRS "."
)
